@@ -16,6 +16,8 @@
  ! Custom map source from ZIPs: Handling for atlas types with two file 
     extensions fixed
  ! Bugfix Osmdroid SQlite: PRIMARY KEY must be unique (#3438206)
+ ~ Turaterkep map updated (renamed internally to Turaterkep256 because of map 
+    format change)
 
 1.9.2 (2011-10-12)
  + Custom map source from ZIP/files in file-system: added possibility to invert
